--- a/.eslintrc
+++ b/.eslintrc
@@ -6,11 +6,6 @@
   // across your Sails app's code base.  These rules are checked against
   // automatically any time you run `npm test`.
   // 
-  // > An additional eslintrc override file is included in the `assets/` folder
-  // > right out of the box.  This is specifically to allow for variations in acceptable
-  // > global variables between front-end JavaScript code designed to run in the browser
-  // > vs. backend code designed to run in a Node.js/Sails process.
-  //
   // > Note: If you're using mocha, you'll want to add an extra override file to your
   // > `test/` folder so that eslint will tolerate mocha-specific globals like `before`
   // > and `describe`.
@@ -81,7 +76,7 @@
     "no-use-before-define":         ["error", {"functions":false}],
     "one-var":                      ["warn", "never"],
     "prefer-arrow-callback":        ["warn", {"allowNamedFunctions":true}],
-    "quotes":                       ["warn", {"avoidEscape":false, "allowTemplateLiterals":true}],
+    "quotes":                       ["warn", "single", {"avoidEscape":false, "allowTemplateLiterals":true}],
     "semi":                         ["warn", "always"],
     "semi-spacing":                 ["warn", {"before":false, "after":true}],
     "semi-style":                   ["warn", "last"]
