--- a/package.json
+++ b/package.json
@@ -5,24 +5,17 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
-    "@sailshq/socket.io-redis": "^5.2.0",
-    "grunt": "1.0.4",
+    "puppeteer": "^10.1.0",
     "sails": "^1.4.3",
-    "sails-hook-grunt": "^4.0.0",
     "sails-hook-orm": "^3.0.2",
-    "puppeteer": "^10.0.0",
     "sails-hook-sockets": "^2.0.0"
   },
   "devDependencies": {
-    "eslint": "5.16.0",
-    "forever": "^4.0.1",
-    "sails-hook-autoreload": "^1.1.0"
+    "eslint": "5.16.0"
   },
   "scripts": {
     "start": "NODE_ENV=production node app.js",
-    "dev": "NODE_ENV=development node app.js",
     "test": "npm run lint && npm run custom-tests && echo 'Done.'",
     "lint": "./node_modules/eslint/bin/eslint.js . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
     "custom-tests": "echo \"(No other custom tests yet.)\" && echo"
